# cli-fizzbuzz

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/: fizz_buzz.py
tests/: conftest.py  test_fizz_buzz.py
